Move king, queen, rook, bishop logic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 enum-map = "2.4.1"
 lazy_static = "1.4.0"
 ld4-expect = { path = "../ld4-expect" }
+
+[dependencies.pyo3]
+version = "0.17.2"
+features = ["auto-initialize"]
