More efficient BoardState.get_all_possible_moves

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,11 @@ enum-map = "2.4.1"
 lazy_static = "1.4.0"
 ld4-expect = { path = "../ld4-expect" }
 itertools = "0.10.5"
+coz = "0.1"
 
 [dependencies.pyo3]
 version = "0.17.2"
 features = ["auto-initialize"]
+
+[profile.release]
+debug = 1
