Build with cargo in coz job

--- a/.github/workflows/run-unit-tests.yaml
+++ b/.github/workflows/run-unit-tests.yaml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --profile=release-with-debug --all-features
+          args: --profile=release-with-debug --all-features --manifest-path ./${{ env.REPO }}/Cargo.toml
       - name: Run Coz
         run: coz run --- ./${{ env.REPO }}/target/release-with-debug/${{ env.REPO }}
       - name: Archive profile
