--- a/.github/workflows/run-unit-tests.yaml
+++ b/.github/workflows/run-unit-tests.yaml
@@ -56,7 +56,7 @@ jobs:
       #     retention-days: 30
       - run: cargo install flamegraph
       - run: sudo apt install linux-tools-common linux-tools-generic linux-tools-`uname -r`
-      - run: flamegraph -o my_flamegraph.svg -- ./target/release-with-debug/kfc-ml
+      - run: sudo ~/.cargo/bin/flamegraph -o my_flamegraph.svg -- ./target/release-with-debug/kfc-ml
       - name: Archive flamegraph
         uses: actions/upload-artifact@v2
         with:
