--- a/.github/workflows/run-unit-tests.yaml
+++ b/.github/workflows/run-unit-tests.yaml
@@ -49,14 +49,24 @@ jobs:
       #     name: profile.coz
       #     path: ./${{ env.REPO }}/profile.coz
       #     retention-days: 30
+      - name: Install perf
+        run: sudo apt install linux-tools-common linux-tools-generic linux-tools-`uname -r`
       - run: cargo install flamegraph
-      - run: sudo apt install linux-tools-common linux-tools-generic linux-tools-`uname -r`
       - name: Configure for perf
         run: sudo sysctl -w kernel.perf_event_paranoid=1
       - run: sudo sh -c " echo 0 > /proc/sys/kernel/kptr_restrict"
-      - run: chmod +x ./kfc-ml/generate-flamegraph.sh
-      - run: ./kfc-ml/generate-flamegraph.sh
-      # - run: flamegraph -o my_flamegraph.svg -- ./${{ env.REPO }}/target/release-with-debug/kfc-ml
+      # - run: chmod +x ./kfc-ml/generate-flamegraph.sh
+      # - run: ./kfc-ml/generate-flamegraph.sh
+      - run: perf record --call-graph dwarf ./${{ env.REPO }}/target/release-with-debug/${{ env.REPO }}
+      - name: Archive perf
+        uses: actions/upload-artifact@v2
+        with:
+          name: perf.data
+          path: ./perf.data
+          retention-days: 30
+      # - run: perf script | inferno-collapse-perf > stacks.folded
+      # - run: cat stacks.folded | inferno-flamegraph > flamegraph.svg
+      - run: flamegraph -o my_flamegraph.svg -- ./${{ env.REPO }}/target/release-with-debug/${{ env.REPO }}
       - name: Archive flamegraph
         uses: actions/upload-artifact@v2
         with:
