Running numpy through rust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ lazy_static = "1.4.0"
 ld4-expect = { path = "../ld4-expect" }
 itertools = "0.10.5"
 rand = "0.8.5"
+numpy = "0.17"
+ndarray = "0.13"
 
 [dependencies.pyo3]
 version = "0.17.2"
