Increase size of stack dump recorded in perf

--- a/.github/workflows/run-unit-tests.yaml
+++ b/.github/workflows/run-unit-tests.yaml
@@ -56,7 +56,7 @@ jobs:
           name: perf.data
           path: ./perf.data
           retention-days: 30
-      - run: flamegraph -o my_flamegraph.svg -- ./${{ env.REPO }}/target/release-with-debug/${{ env.REPO }}
+      - run: flamegraph -c "record -F 997 --call-graph dwarf,65536 -g" -o my_flamegraph.svg -- ./${{ env.REPO }}/target/release-with-debug/${{ env.REPO }}
       - name: Archive flamegraph
         uses: actions/upload-artifact@v2
         with:
