--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ ld4-expect = { path = "../ld4-expect" }
 itertools = "0.10.5"
 rand = "0.8.5"
 numpy = "0.17"
+rayon = "1.5"
 
 [dependencies.pyo3]
 version = "0.17.2"
