--- a/.github/workflows/run-unit-tests.yaml
+++ b/.github/workflows/run-unit-tests.yaml
@@ -32,9 +32,8 @@ jobs:
         run: pip install -r ./${{ env.REPO }}/requirements.txt
       - name: Download kfc-ml dataset
         run: |
-          cd kfc-ml
-          chmod +x setup.sh
-          ./setup.sh
+          chmod +x ./kfc-ml/setup.sh
+          ./kfc-ml/setup.sh
       - name: Update
         run: sudo apt-get update
       - uses: actions-rs/toolchain@v1
