--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ lazy_static = "1.4.0"
 ld4-expect = { path = "../ld4-expect" }
 itertools = "0.10.5"
 rand = "0.8.5"
+numpy = "0.17"
+rayon = "1.5"
+counter = "0.5.7"
 
 [dependencies.pyo3]
 version = "0.17.2"
